fix: enforce max-width to prevent overflow (#38)

--- a/resources/ext.embedVideo.styles.less
+++ b/resources/ext.embedVideo.styles.less
@@ -1,5 +1,6 @@
 .embedvideo {
 	margin: 0;
+	max-width: 100%; // no overflow
 
 	&-wrapper {
 		position: relative;
